Added vendor types and product categories api along with admin routes
