# models/vendor.js
@@ -17,27 +17,28 @@ const Vendor = sequelize.define('vendor', {
   address: Sequelize.STRING,
   city: Sequelize.STRING,
   password: {type: Sequelize.STRING, allowNull: false},
-  shop_open: Sequelize.BOOLEAN,
+  shop_open: {type: Sequelize.BOOLEAN, defaultValue: false},
   opt_for_delivery_boy: Sequelize.BOOLEAN,
-  no_of_ratings: Sequelize.INTEGER,
-  rating: Sequelize.FLOAT,
-  deleted: Sequelize.BOOLEAN,
-  ban: Sequelize.BOOLEAN,
-  verified: Sequelize.BOOLEAN,
+  no_of_ratings: {type: Sequelize.INTEGER, defaultValue: 0},
+  rating: {type: Sequelize.FLOAT, defaultValue: 0},
+  deleted: {type: Sequelize.BOOLEAN, defaultValue: false},
+  ban: {type: Sequelize.BOOLEAN, defaultValue: false},
+  verified: {type: Sequelize.BOOLEAN, defaultValue: false},
   local_store: Sequelize.BOOLEAN,
   upi_id: Sequelize.STRING,
   paytm_no: Sequelize.STRING,
   location_lat: Sequelize.STRING,
   location_long: Sequelize.STRING,
   tags: Sequelize.STRING,
-  membership_active: Sequelize.BOOLEAN,
-  payable: Sequelize.FLOAT,
+  membership_active: {type: Sequelize.BOOLEAN, defaultValue: true},
+  payable: {type: Sequelize.FLOAT, defaultValue: 0},
   delivery_boy: Sequelize.INTEGER,
   owns_store: Sequelize.BOOLEAN, 
   reset_password_token: Sequelize.STRING,
   reset_password_time: Sequelize.DATE,
   opening_time: Sequelize.STRING,
-  closing_time: Sequelize.STRING
+  closing_time: Sequelize.STRING,
+  device_id: Sequelize.STRING
 });
 
 module.exports = Vendor;
