# routes/vendor.js
@@ -2,7 +2,32 @@ var express = require('express');
 var router = express.Router();
 const vendorController = require('../controllers/vendor');
 const { body } = require('express-validator');
-const isAuth = require('../middleware/is-auth');
+const isAuth = require('../middlewares/is-auth');
+const multer = require('multer');
+const path = require('path');
+
+const fileStorage = multer.diskStorage({
+  destination: (req, file, cb) => {
+    cb(null, path.join('images','vendors'));
+  },
+  filename: (req, file, cb) => {
+    cb(null, new Date().toISOString() + '-' + file.originalname);
+  }
+});
+
+const fileFilter = (req, file, cb) => {
+  if (
+      file.mimetype === 'image/png' ||
+      file.mimetype === 'image/jpg' ||
+      file.mimetype === 'image/jpeg'
+  ) {
+      cb(null, true);
+  } else {
+      cb(null, false);
+  }
+  };
+
+const upload = multer({ storage: fileStorage, fileFilter: fileFilter });
 
 router.post('/signup',
   [
@@ -45,7 +70,7 @@ router.post('/forgotpassword',
     .normalizeEmail(),
   vendorController.postForgotPassword);
 
-router.put('/forgotpassword',
+router.patch('/forgotpassword',
   [
     body('email')
       .isEmail()
@@ -58,6 +83,21 @@ router.put('/forgotpassword',
   ],
   vendorController.putForgotPassword);
 
-router.put('updateDashboard', isAuth, )
+router.patch('/status', isAuth, vendorController.putUpdateStatus);
+
+router.patch('/dashboard', isAuth, vendorController.putUpdateDashboard);
+
+router.patch('/dashboardLogo', isAuth, upload.single('image'), vendorController.putUpdateDashboardLogo);
+
+router.delete('/dashboardLogo', isAuth, vendorController.deleteDashboardLogo);
+
+router.patch('/changePassword', body('new_password')
+  .trim()
+  .isLength(min = 8)
+  .withMessage('New Password should be atleast 8 characters long'), isAuth, vendorController.putChangePassword);
+
+router.patch('/shopTime', isAuth, vendorController.putUpdateTime);
+
+router.patch('/shopLocation', isAuth, vendorController.putUpdateLocation);
 
 module.exports = router;
